--- a/static/style.css
+++ b/static/style.css
@@ -3,6 +3,9 @@
 /*
 *   index.php styles
 */
+.main-title {
+  font-size: 32px;
+}
 .srch-section {
   margin-bottom: 1rem;
   display: flex;
@@ -1272,6 +1275,13 @@ button.add-btn {
   .pie-box {
     display: block;
   }
+  .r-cols.index-btns {
+    display: block;
+  }
+  .r-cols.index-btns h4 {
+    margin: 2rem 0;
+    width: 100%;
+  }
 }
   /*
   @media screen and (max-height: 700px) {
@@ -1284,134 +1294,143 @@ button.add-btn {
   /* Mobile responsive section start*/
   /* removed only keyword before screen keyword 6/18 */
   /* Responsive Tables */
-  @media only screen and (max-width: 760px),
-  (min-device-width: 768px) and (max-device-width: 1024px)  {
-    .scroll-item {
-      width: 250px;
-    }
-    /* dashboard adjustments */
-    main {
-      width: auto;
-    }
-    .tbl-head {
-      display: none;
-    }
-    /* Force table to not be like tables anymore */
-    table, thead, tbody, th, td, tr { 
-      display: block; 
-    }
-    
-    /* Hide table headers (but not display: none;, for accessibility) */
-    thead tr { 
-      position: absolute;
-      top: -9999px;
-      left: -9999px;
-    }
-    
-    tr { 
-      border: 1px solid #ccc; 
-      margin-top: 1rem;
-      box-shadow: 0 3px 2px -2px rgba(0,0,0,.2);
-      background: #fff;
-    }
-    
-    td { 
-      /* Behave  like a "row" */
-      border: none;
-      border-bottom: 1px solid #eee; 
-      position: relative;
-      padding-left: 35%; 
-    }
-    
-    td:before { 
-      /* Now like a table header */
-      position: absolute;
-      /* Top/left values mimic padding */
-      top: 6px;
-      left: 6px;
-      width: 45%; 
-      padding-right: 10px; 
-      white-space: nowrap;
-    }
-    
-    /*
-    Labeling mobile tables: Journal Section
-    */
-    .journal-tab td:nth-of-type(1):before { content: "Category"; }
-    .journal-tab td:nth-of-type(2):before { content: "Title"; }
-    .journal-tab td:nth-of-type(3):before { content: "Preview"; }
-    .journal-tab td:nth-of-type(4):before { content: "Creator"; }  
-    .journal-tab td:nth-of-type(5):before { content: "Date Posted"; }
-
-    /*
-    Labeling mobile tables: Task Section
-    */
-    .task-tab td:nth-of-type(1):before { content: "Title"; }
-    .task-tab td:nth-of-type(2):before { content: "Status"; }
-    .task-tab td:nth-of-type(3):before { content: "Assigned To"; }
-    .task-tab td:nth-of-type(4):before { content: "Team"; }
-    .task-tab td:nth-of-type(5):before { content: "Priority"; }
-    .task-tab td:nth-of-type(6):before { content: "Due Date"; }  
-    .task-tab td:nth-of-type(7):before { content: "Date Posted"; }
-
-    .settings-tab td:nth-of-type(1):before { content: "Action"; }
-    .settings-tab td:nth-of-type(2):before { content: "Project"; }
-    .settings-tab td:nth-of-type(3):before { content: "Receiver"; }
-    .settings-tab td:nth-of-type(4):before { content: "Sender"; }
-    .settings-tab td:nth-of-type(5):before { content: "Status"; }
-    .settings-tab td:nth-of-type(6):before { content: "Submitted"; } 
-
-  @media screen and (max-width: 700px) {
-    .topnav-list li {
-      display: none;
-    }
-    .topnav a.icon {
-      float: right;
-      display: block;
-    }
-    .task-panel {
-      /*
-      width: 80%;
-      */
-      margin: 0;
-    }
-    .inner-task-panel {
-      margin: 0;
-    }
-    /*
-    .opt-desc {
-      display: none;
-    }
-    */
-    .log-details {
-      width: 540px;
-      margin: 0;
-      padding: 0 2rem;
-    }
-
-    .editor {
-      padding: 0 1rem;
-      text-align: left;
-    }
-
-    .edit-field {
-      margin-top: .5rem;
-    }
-    .topnav.responsive li {
-      float: none;
-      display: block;
-      text-align: left;
-      z-index: 10;
-    }
-    .topnav.responsive .icon {
-      position: absolute;
-      right: 0;
-      top: 0;
-    }
-    .add-worker {
-      width:80%;
-    }
+@media only screen and (max-width: 760px),
+(min-device-width: 768px) and (max-device-width: 1024px)  {
+  .scroll-item {
+    width: 250px;
   }
+  /* dashboard adjustments */
+  main {
+    width: auto;
+  }
+  .tbl-head {
+    display: none;
+  }
+  /* Force table to not be like tables anymore */
+  table, thead, tbody, th, td, tr { 
+    display: block; 
+  }
+  
+  /* Hide table headers (but not display: none;, for accessibility) */
+  thead tr { 
+    position: absolute;
+    top: -9999px;
+    left: -9999px;
+  }
+  
+  tr { 
+    border: 1px solid #ccc; 
+    margin-top: 1rem;
+    box-shadow: 0 3px 2px -2px rgba(0,0,0,.2);
+    background: #fff;
+  }
+  
+  td { 
+    /* Behave  like a "row" */
+    border: none;
+    border-bottom: 1px solid #eee; 
+    position: relative;
+    padding-left: 35%; 
+  }
+  
+  td:before { 
+    /* Now like a table header */
+    position: absolute;
+    /* Top/left values mimic padding */
+    top: 6px;
+    left: 6px;
+    width: 45%; 
+    padding-right: 10px; 
+    white-space: nowrap;
+  }
+  
+  /*
+  Labeling mobile tables: Journal Section
+  */
+  .journal-tab td:nth-of-type(1):before { content: "Category"; }
+  .journal-tab td:nth-of-type(2):before { content: "Title"; }
+  .journal-tab td:nth-of-type(3):before { content: "Preview"; }
+  .journal-tab td:nth-of-type(4):before { content: "Creator"; }  
+  .journal-tab td:nth-of-type(5):before { content: "Date Posted"; }
+
+  /*
+  Labeling mobile tables: Task Section
+  */
+  .task-tab td:nth-of-type(1):before { content: "Title"; }
+  .task-tab td:nth-of-type(2):before { content: "Status"; }
+  .task-tab td:nth-of-type(3):before { content: "Assigned To"; }
+  .task-tab td:nth-of-type(4):before { content: "Team"; }
+  .task-tab td:nth-of-type(5):before { content: "Priority"; }
+  .task-tab td:nth-of-type(6):before { content: "Due Date"; }  
+  .task-tab td:nth-of-type(7):before { content: "Date Posted"; }
+
+  .settings-tab td:nth-of-type(1):before { content: "Action"; }
+  .settings-tab td:nth-of-type(2):before { content: "Project"; }
+  .settings-tab td:nth-of-type(3):before { content: "Receiver"; }
+  .settings-tab td:nth-of-type(4):before { content: "Sender"; }
+  .settings-tab td:nth-of-type(5):before { content: "Status"; }
+  .settings-tab td:nth-of-type(6):before { content: "Submitted"; } 
+
+  /* index responsive section */
+  .r-cols.index-btns {
+    display: block;
+  }
+}
+ 
+@media screen and (max-width: 700px) {
+  .topnav-list li {
+    display: none;
+  }
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+  .task-panel {
+    /*
+    width: 80%;
+    */
+    margin: 0;
+  }
+  .inner-task-panel {
+    margin: 0;
+  }
+  /*
+  .opt-desc {
+    display: none;
+  }
+  */
+  .log-details {
+    width: 540px;
+    margin: 0;
+    padding: 0 2rem;
+  }
+
+  .editor {
+    padding: 0 1rem;
+    text-align: left;
+  }
+
+  .edit-field {
+    margin-top: .5rem;
+  }
+  .topnav.responsive li {
+    float: none;
+    display: block;
+    text-align: left;
+    z-index: 10;
+  }
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .add-worker {
+    width:80%;
+  }
+  .r-cols.index-btns {
+    display: block;
+  }
+}
 
   @media screen and (max-width: 600px) {
     .topnav-list li {display: none;}
