--- a/static/style.css
+++ b/static/style.css
@@ -1045,12 +1045,19 @@ button {
   font-size: 25px;
 }
 .emailer {
-  border: solid #ddd 2px;
+  border: solid #ddd 1px;
   padding: 2rem;
   border-radius: 8px;
   margin: 0 auto;
   margin-top: 2rem;
-  width: 45%;
+  margin-bottom: 2rem;
+  background: #fff;
+}
+.mailer-bg {
+  background: #f1f1f1;
+}
+.reminder-notes {
+  max-width: 50%;
 }
 .repeat-input {
   width: 100%;
