--- a/static/mini_nav.css
+++ b/static/mini_nav.css
@@ -2,6 +2,7 @@
   overflow: hidden;
   background-color: #f1f1f1;
   padding: 0 1.5rem;
+  margin-top: 2rem; 
 }
 
 .todo-flex.r-cols.upload-forms {
