--- a/static/style.css
+++ b/static/style.css
@@ -9,7 +9,6 @@
 .srch-section {
   display: flex;
   justify-content: space-between;
-  padding: 0 2rem;
   width: 80%;
   margin: 0 auto;
 }
@@ -21,7 +20,7 @@
   width: 100%;
 }
 .w-90 {
-  width: 90%;
+  width: 100%;
   margin: 0 auto;
 }
 .search-field:focus {
@@ -29,6 +28,9 @@
 }
 .blockzero {
   margin-block-end: 0;
+}
+#proj-container h1 {
+  font-size: 1.6em;
 }
 .project-entry {
 	padding: 2rem 0;
@@ -40,7 +42,7 @@ input.add-btn {
 .add-btn-2 {
   background-image: linear-gradient(315deg, #4c4177 0%, #2a5470 74%);
   color: #fff;
-  padding: 1rem;
+  padding: .75rem;
   border-radius: 8px;
 }
 .cta-header {
@@ -55,12 +57,16 @@ input.add-btn {
 }
 
 .intro-head {
-  width: 80%;
+  width: 90%;
   margin: 0 auto;
 }
 
+.intro-head p {
+  width: 65%;
+}
+
 .proj-feed {
-  width: 80%;
+  width: 90%;
   margin: 0 auto;
 }
 
@@ -128,12 +134,6 @@ nav {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-
-/* This style is only useful when mobile nav is clicked
-ul.topnav-list {
-  margin-right: 2.2rem;
-}
-*/
 
 .parent-nav {
   padding: 0 1rem;
@@ -857,7 +857,9 @@ input.send-req {
 .deny-btn:hover {
   background:#333;
 }
-
+.mr-5 {
+  margin-right: 5px;
+}
 .text-center {
   text-align: center!important;
 }
@@ -1104,6 +1106,9 @@ button {
   padding-right: 8px;
 }
 
+.usrname {
+  color:#2196F3;
+}
 #options {
   padding: 5px;
 }
@@ -1341,7 +1346,18 @@ button.add-btn {
   }
   .r-cols.index-btns h4 {
     margin: 2rem 0;
+    width: 90%;
+    text-align: center;
+    background-image: linear-gradient( 315deg, #4c4177 0%, #2a5470 74%);
+    color: #fff;
+    padding: .75rem;
+    border-radius: 8px;
+  }
+  .inner-task-panel {
     width: 100%;
+  }
+  .btn-spcing {
+    padding: 0 1rem;
   }
 }
   /*
@@ -1638,6 +1654,9 @@ button.add-btn {
       font-size: 16pt;
     }
     .svg-bg {
+      width: 100%;
+    }
+    .intro-head p {
       width: 100%;
     }
     .log-header {
