simplified invite settings

--- a/static/style.css
+++ b/static/style.css
@@ -1089,6 +1089,9 @@ button {
 .comment-form textarea {
   height: 110px;
 }
+.comment-txt {
+  height: 100px!important;
+}
 /* ---------------------------------+
   Todo & Journal Icons              |
 -----------------------------------*/
