--- a/static/style.css
+++ b/static/style.css
@@ -62,6 +62,10 @@ a#myBtn {
 .intro-head {
   width: 90%;
   margin: 0 auto;
+  font-size: 14pt;
+  padding: 1rem;
+  margin-top: 1rem;
+  background: #fff;
 }
 
 .intro-head p {
@@ -71,6 +75,9 @@ a#myBtn {
 .proj-feed {
   width: 90%;
   margin: 0 auto;
+  padding: 1rem;
+  margin-top: 1rem;
+  background: #fff;
 }
 
 .index-spc {
@@ -114,6 +121,7 @@ html, body {
 body {
   font-family: 'IBM Plex Sans', sans-serif;
   line-height: 1.5;
+  background: #f1f1f1;
 }
   
 a {
@@ -1347,6 +1355,9 @@ button.add-btn {
 }
 
 @media screen and (max-width: 830px) {
+  .intro-head p {
+	width: 100%;
+  }
   .task-ops {
     display: block;
     margin-top: 10px;
@@ -1368,7 +1379,7 @@ button.add-btn {
   }
   .r-cols.index-btns h4 {
     margin: 2rem 0;
-    width: 90%;
+    width: 100%;
     text-align: center;
     background-image: linear-gradient( 315deg, #4c4177 0%, #2a5470 74%);
     color: #fff;
@@ -1624,7 +1635,7 @@ button.add-btn {
     }
     main {
       margin-top: 0;
-      padding: 0 1rem;
+      padding: 0;
       width: 90%;
     }
     .form-container {
