--- a/static/style.css
+++ b/static/style.css
@@ -1245,7 +1245,9 @@ tr:hover {background-color:#f5f5f5;}
   padding: 1rem;
   margin-top: 10px;
 }
-
+#chart_div {
+	border: solid 2px #ddd;
+}
 /* ---------------------------------+
   Chatroom Section                  |
 -----------------------------------*/
